--- a/assets/css/mainstyle.css
+++ b/assets/css/mainstyle.css
@@ -102,7 +102,10 @@ footer {
     padding-right: 3%;
     padding-left: 2%;
    border-radius: 10px;
-   
+   margin-left: 5px;
+   width: auto ;
+  max-width: 100% ;
+  height: auto ;
   
 }
 
@@ -148,8 +151,9 @@ body {
 #about-me {
 
     font-weight: 500;
-    max-width: 90%;
- 
+    padding-left: 2%;
+    padding-right: 2%;
+    max-width: 100%;
 }
 
 
